--- a/assets/css/scrollbar.css
+++ b/assets/css/scrollbar.css
@@ -1,19 +1,28 @@
-@supports (not (font: -apple-system)) {
-  ::-webkit-scrollbar {
-    width: 10px;
-    background-color: transparent;
-  }
-
-  ::-webkit-scrollbar-track {
-    background-color: rgb(30 41 59);
-  }
-
-  ::-webkit-scrollbar-thumb {
-    border-radius: .6em;
-    background-color: rgb(51 65 85);
-  }
-
-  ::-webkit-scrollbar-thumb:hover {
-    background-color: rgb(71 85 105);
-  }
+:root {
+  --scrollbar: rgb(51 65 85);
+  --scrollbar-hover: rgb(51 65 85);
+  --scrollbar-bg: rgb(17 24 39);
 }
+
+* {
+  scrollbar-color: var(--scrollbar) var(--scrollbar-bg);
+}
+
+::-webkit-scrollbar {
+  width: 2em;
+    height: 2em
+}
+::-webkit-scrollbar-track,
+::-webkit-scrollbar-corner {
+  background: var(--scrollbar-bg);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--scrollbar);
+  border-radius: .6em;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: var(--scrollbar-hover);
+}
+
