--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -1,17 +1,3 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-@layer base{
-  body{
-    font-family: 'Lilita One', sans-serif;
-    background: rgb(17 24 39);
-    min-width: 480px;
-    overflow-x: hidden;
-  }
-  @media screen and (max-width: 460px) {
-    body {
-      zoom: 0.76;
-    }
-  }
-}
